--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "mkdir dist && deno bundle src/main.ts dist/index.ts",
     "dev": "deno run src/main.ts",
     "release": "echo \"No release\"",
-    "ci:version": "pnpm changeset version"
+    "ci:version": "pnpm changeset version",
+    "ci:publish": "./scripts/publish.sh"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2"
