--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev": "deno run src/main.ts",
     "release": "echo \"No release\"",
     "ci:version": "pnpm changeset version",
-    "ci:publish": "./scripts/publish.sh"
+    "ci:publish": "sh ./scripts/publish.sh"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2"
