misc: bump version

--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -33,5 +33,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BUNNY_GITHUB }}
         with:
           publish: "pnpm run ci:publish"
+          version: "pnpm run ci:version"
           title: "🎉 Release"
           createGithubReleases: true
