--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -1,14 +1,22 @@
 name: On merge changeset
 
 on:
-  pull_request:
-    types: [closed]
+  # To enable the Changeset pattern, you'll need to uncomment those line so each
+  # time a Pull Request is closed you run this action.
+  # pull_request:
+  #   types: [closed]
+  #   branches:
+  #     - 'main'
+  # Every push on main are going to run this action.
+  push:
     branches:
       - 'main'
 
 jobs:
   publish:
-    if: contains(github.event.pull_request.head.ref, 'changeset-release')
+    # To ensure you only run this action when closing a Release PR, you should
+    # uncomment this
+    # if: contains(github.event.pull_request.head.ref, 'changeset-release')
 
     name: 'Upload script'
     runs-on: ubuntu-latest
