--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BUNNY_GITHUB }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Javascript
         uses: ./.github/actions/setup-project
@@ -28,7 +28,7 @@ jobs:
       - name: Create Release Pull Request
         uses: changesets/action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.BUNNY_GITHUB }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           publish: "pnpm run ci:publish"
           version: "pnpm run ci:version"
